# momento

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  entrypoint.sh  package.json  pnpm-lock.yaml  run_server.py  run_server.sh  turbo.json
apps/api/: Cargo.toml  pyproject.toml  schema.sql
apps/api/momento_api/: config.py  constants.py  database.py  exceptions.py  main.py
apps/api/momento_api/auth/: dependencies.py  jwt.py
apps/api/momento_api/models/: album.py  auth.py  imports.py  media.py  share.py  tag.py  trash.py  user.py
apps/api/momento_api/processor/: importer.py  media_processor.py  metadata.py  regenerator.py  thumbnails.py
apps/api/momento_api/routes/: albums.py  auth.py  imports.py  map.py  media.py  public.py  router.py  share.py  tags.py  timeline.py  trash.py  users.py
apps/api/src/: app.rs  constants.rs  error.rs  lib.rs  logging.rs  main.rs  test_utils.rs
apps/api/src/auth/: extractors.rs  jwt.rs
apps/api/src/config/: mod.rs
apps/api/src/database/: backfill.rs  migration.rs  mod.rs  pool.rs  queries.rs  schema.rs  schema.sql
apps/api/src/models/: imports.rs  map.rs  media.rs  mod.rs  share.rs  tag.rs  user.rs
apps/api/src/processor/: importer.rs  media_processor.rs  metadata.rs  mod.rs  regenerator.rs  thumbnails.rs
apps/api/src/routes/: albums.rs  auth.rs  imports.rs  map.rs  media.rs  mod.rs  public.rs  share.rs  tags.rs  timeline.rs  trash.rs  users.rs
apps/api/src/utils/: datetime.rs  geocoding.rs  hash.rs  mod.rs
apps/api/src/webdav/: auth.rs  handler.rs  mod.rs
apps/web/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
apps/web/dist-node/: tsconfig.node.tsbuildinfo  vite.config.js
apps/web/src/: main.tsx
apps/web/src/api/: admin.ts  albums.ts  auth.ts  client.ts  map.ts  media.ts  trash.ts  types.ts
apps/web/src/context/: AuthContext.tsx
apps/web/src/hooks/: useAlbums.ts  useAuth.ts  useMapClusters.ts  useMedia.ts  useMediaUrl.ts
apps/web/src/pages/: Albums.tsx  Map.tsx  Timeline.tsx  Trash.tsx
apps/web/src/styles/: index.css
apps/web/src/utils/: batcher.ts
src/api/src/: constants.rs  error.rs  lib.rs  main.rs
src/api/src/auth/: extractors.rs  mod.rs  (+1 more)
src/api/tests/: main.rs
src/web/: eslint.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
src/web/dist-node/: tsconfig.node.tsbuildinfo
src/web/src/: App.tsx
(+58 files in other folders)
