[package]
name = "momento-api"
version = "0.1.0"
edition = "2021"
description = "Self-hosted photo management backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
bcrypt = "0.15"

# Image processing
image = "0.25"
kamadak-exif = "0.5"

# Utils
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
glob = "0.3"
lazy_static = "1.4"
serde_urlencoded = "0.7"
futures = "0.3"
mime_guess = "2"

# Geospatial
geohash = "0.13"

# WebDAV server
dav-server = "0.7"
http-body-util = "0.1"

[dev-dependencies]
axum-test = "15"
tempfile = "3"
